# punch-starter

./: .gitmodules  readme.md
client/: .env.example  next.config.mjs  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
client/SDK-Connections/: Stacks.tsx
client/abi/: daoFactory.ts  fundingDao.ts
client/components/: EditableProject.tsx  Header.tsx  Leaderboard.tsx  Post.tsx  SidebarButton.tsx  dashboard.tsx
client/components/button/: button.module.scss  button.tsx
client/components/card/: card.module.scss  card.tsx
client/components/image/: image.module.scss  image.tsx
client/components/input/: input.module.scss  input.tsx
client/context/: authcontext.tsx  walletcontext.tsx
client/layout/: layout.module.scss  layout.tsx
client/models/: chains.ts  comment.ts  milestone.ts  project.ts  tags.ts
client/pages/: _app.tsx  index.module.scss  index.tsx
client/redirect/: redirect.tsx
client/sdk-connection-code/: ConnectionAdapter.ts  SuiAdapter.ts  stacks-connection.tsx  sui-connection.tsx
client/styles/: background.scss  globals.css  palette.scss
client/utils/: constant.ts  conversion.ts  denomination.ts  supabase.ts
client/validation/: form.ts  models.ts  schema.ts
contracts/clarity/: Clarinet.toml  package-lock.json  package.json
contracts/stacks/: package-lock.json  package.json
contracts/stellar/: README.md
contracts/stellar/contracts/hello_world/: Cargo.toml
contracts/sui/: Move.toml  README.md
server/: package-lock.json  package.json
server/src/: index.ts
stellar-frontend/: package-lock.json  package.json
(+72 files in other folders)
